--- a/app/views/alumno_listar.html
+++ b/app/views/alumno_listar.html
@@ -18,16 +18,40 @@
   <table>
     <thead>
       <tr>
-          <th>DNI</th>
-          <th>Carrera</th>
-          <th>Nombre</th>
-          <th>Apellido</th>
+          <th>
+            <a ng-click="revertirOrden(); sortType = 'dni'">
+              DNI
+              <span ng-show="sortType == 'dni' && sortReverse == true" class="fa fa-caret-down"><i class="tiny material-icons">arrow_drop_up</i></span>
+              <span ng-show="sortType == 'dni' && sortReverse == false" class="fa fa-caret-down"><i class="tiny material-icons">arrow_drop_down</i></span>
+            </a>
+          </th>
+          <th>
+            <a ng-click="revertirOrden(); sortType = 'carrera'">
+              Carrera
+              <span ng-show="sortType == 'carrera' && sortReverse == true" class="fa fa-caret-down"><i class="tiny material-icons">arrow_drop_up</i></span>
+              <span ng-show="sortType == 'carrera' && sortReverse == false" class="fa fa-caret-down"><i class="tiny material-icons">arrow_drop_down</i></span>
+            </a>
+          </th>
+          <th>
+            <a ng-click="revertirOrden(); sortType = 'nombre'">
+              Nombre
+              <span ng-show="sortType == 'nombre' && sortReverse == true" class="fa fa-caret-down"><i class="tiny material-icons">arrow_drop_up</i></span>
+              <span ng-show="sortType == 'nombre' && sortReverse == false" class="fa fa-caret-down"><i class="tiny material-icons">arrow_drop_down</i></span>
+            </a>
+          </th>
+          <th>
+            <a ng-click="revertirOrden(); sortType = 'apellido'">
+              Apellido
+              <span ng-show="sortType == 'apellido' && sortReverse == true" class="fa fa-caret-down"><i class="tiny material-icons">arrow_drop_up</i></span>
+              <span ng-show="sortType == 'apellido' && sortReverse == false" class="fa fa-caret-down"><i class="tiny material-icons">arrow_drop_down</i></span>
+            </a>
+          </th>
           <th>Opciones</th>
       </tr>
     </thead>
     
     <tbody>
-      <tr class="collection-item" ng-repeat="alumno in alumnos | filter: buscar">
+      <tr class="collection-item" ng-repeat="alumno in alumnos | orderBy:sortType:sortReverse | filter: buscar">
         <td>{{alumno.username}}</td>
         <td>{{alumno.carrera}}</td>
         <td>{{alumno.first_name}}</td>
