--- a/app/views/pais_listar.html
+++ b/app/views/pais_listar.html
@@ -3,10 +3,12 @@
         <a href="#/paises-agregar" class="btn btn-agregar">Agregar país</a>
         <div class="nav-wrapper">
             <form>
-              <div class="input-field">
-                <input id="search" type="search" required ng-model="buscar">
-                <label class="label-icon" for="search"><i class="material-icons">search</i></label>
-                <i class="material-icons">close</i>
+              <div class="row">
+                <div class="input-field col s8 m4">
+                  <input id="search" type="search" required ng-model="buscar">
+                  <label class="label-icon" for="search"><i class="material-icons">search</i></label>
+                  <i class="material-icons">close</i>
+                </div>
               </div>
             </form>
           </div>
@@ -14,13 +16,19 @@
           <table>
             <thead>
               <tr>
-                  <th>Nombre</th>
+                  <th>
+                    <a ng-click="revertirOrden(); sortType = 'nombre'">
+                      Nombre
+                      <span ng-show="sortType == 'nombre' && sortReverse == true" class="fa fa-caret-down"><i class="tiny material-icons">arrow_drop_up</i></span>
+                      <span ng-show="sortType == 'nombre' && sortReverse == false" class="fa fa-caret-down"><i class="tiny material-icons">arrow_drop_down</i></span>
+                    </a>
+                  </th>
                   <th>Opciones</th>
               </tr>
             </thead>
     
             <tbody>
-              <tr ng-repeat="pais in paises ">
+              <tr ng-repeat="pais in paises | orderBy:sortType:sortReverse | filter: buscar">
                 <td>{{pais.nombre}}</td>
                 <td><a title="Editar" href="#/paises-agregar/{{pais.id}}"><i class="listar-iconos material-icons">edit</i></a></td>
               </tr>
