--- a/app/views/actividad_listar.html
+++ b/app/views/actividad_listar.html
@@ -14,13 +14,19 @@
       <table>
         <thead>
           <tr>
-              <th>Descripción</th>
+              <th>
+                <a ng-click="revertirOrden(); sortType = 'descripcion'">
+                  Descripción
+                  <span ng-show="sortType == 'descripcion' && sortReverse == true" class="fa fa-caret-down"><i class="tiny material-icons">arrow_drop_up</i></span>
+                  <span ng-show="sortType == 'descripcion' && sortReverse == false" class="fa fa-caret-down"><i class="tiny material-icons">arrow_drop_down</i></span>
+                </a>
+              </th>
               <th>Opciones</th>
           </tr>
         </thead>
 
         <tbody>
-          <tr ng-repeat="actividad in actividades"> <!--  | filter: buscar -->
+          <tr ng-repeat="actividad in actividades | orderBy:sortType:sortReverse | filter: buscar">
             <td>{{actividad.descripcion}}</td>
             <td><a title="Ver actividad" href="#/actividades-ver/{{actividad.id}}"><i class="listar-iconos material-icons">find_in_page</i></a></td>
           </tr>
