--- a/app/views/alumno/alumno_actividades.html
+++ b/app/views/alumno/alumno_actividades.html
@@ -12,13 +12,19 @@
           <table>
             <thead>
               <tr>
-                  <th>Descripción</th>
+                  <th>
+                    <a ng-click="revertirOrden(); sortType = 'descripcion'">
+                      Descripción
+                      <span ng-show="sortType == 'descripcion' && sortReverse == true" class="fa fa-caret-down"><i class="tiny material-icons">arrow_drop_up</i></span>
+                      <span ng-show="sortType == 'descripcion' && sortReverse == false" class="fa fa-caret-down"><i class="tiny material-icons">arrow_drop_down</i></span>
+                    </a>
+                  </th>
                   <th>Opciones</th>
               </tr>
             </thead>
     
             <tbody>
-              <tr ng-repeat="actividad in actividades"> <!--  | filter: buscar -->
+              <tr ng-repeat="actividad in actividades | orderBy:sortType:sortReverse | filter: buscar">
                 <td>{{actividad.descripcion}}</td>
               </tr>
             </tbody>
