--- a/app/views/alumno_informe_listar.html
+++ b/app/views/alumno_informe_listar.html
@@ -3,10 +3,12 @@
     <a href="#/informes-agregar/{{idAlumno}}" class="btn btn-agregar">Agregar informe</a>
     <div class="nav-wrapper">
         <form>
-          <div class="input-field">
-            <input id="search" type="search" required ng-model="buscar">
-            <label class="label-icon" for="search"><i class="material-icons">search</i></label>
-            <i class="material-icons">close</i>
+          <div class="row">
+            <div class="input-field">
+              <input id="search" type="search" required ng-model="buscar">
+              <label class="label-icon" for="search"><i class="material-icons">search</i></label>
+              <i class="material-icons">close</i>
+            </div>
           </div>
         </form>
       </div>
@@ -14,16 +16,40 @@
       <table>
         <thead>
           <tr>
-              <th>Fecha</th>
-              <th>Título</th>
-              <th>Descripción</th>
-              <th>Autor</th>
+              <th>
+                <a ng-click="revertirOrden(); sortType = 'fecha'">
+                  Fecha
+                  <span ng-show="sortType == 'fecha' && sortReverse == true" class="fa fa-caret-down"><i class="tiny material-icons">arrow_drop_up</i></span>
+                  <span ng-show="sortType == 'fecha' && sortReverse == false" class="fa fa-caret-down"><i class="tiny material-icons">arrow_drop_down</i></span>
+                </a>
+              </th>
+              <th>
+                <a ng-click="revertirOrden(); sortType = 'titulo'">
+                  Título
+                  <span ng-show="sortType == 'titulo' && sortReverse == true" class="fa fa-caret-down"><i class="tiny material-icons">arrow_drop_up</i></span>
+                  <span ng-show="sortType == 'titulo' && sortReverse == false" class="fa fa-caret-down"><i class="tiny material-icons">arrow_drop_down</i></span>
+                </a>
+              </th>
+              <th>
+                <a ng-click="revertirOrden(); sortType = 'descripcion'">
+                  Descripción
+                  <span ng-show="sortType == 'descripcion' && sortReverse == true" class="fa fa-caret-down"><i class="tiny material-icons">arrow_drop_up</i></span>
+                  <span ng-show="sortType == 'descripcion' && sortReverse == false" class="fa fa-caret-down"><i class="tiny material-icons">arrow_drop_down</i></span>
+                </a>
+              </th>
+              <th>
+                <a ng-click="revertirOrden(); sortType = 'autor'">
+                  Autor
+                  <span ng-show="sortType == 'autor' && sortReverse == true" class="fa fa-caret-down"><i class="tiny material-icons">arrow_drop_up</i></span>
+                  <span ng-show="sortType == 'autor' && sortReverse == false" class="fa fa-caret-down"><i class="tiny material-icons">arrow_drop_down</i></span>
+                </a>
+              </th>
               <th>Opciones</th>
           </tr>
         </thead>
 
         <tbody>
-          <tr ng-repeat="informe in informes"> <!--  | filter: buscar -->
+          <tr ng-repeat="informe in informes | orderBy:sortType:sortReverse | filter: buscar">
             <td>{{informe.fecha}}</td>
             <td>{{informe.titulo}}</td>
             <td>{{informe.descripcion}}</td>
