--- a/app/views/cursada_listar.html
+++ b/app/views/cursada_listar.html
@@ -3,27 +3,53 @@
         <a href="#/cursadas-agregar/{{idAlumno}}" class="btn btn-agregar">Agregar cursada</a>
         <div class="nav-wrapper">
             <form>
-              <div class="input-field">
-                <input id="search" type="search" required ng-model="buscar">
-                <label class="label-icon" for="search"><i class="material-icons">search</i></label>
-                <i class="material-icons">close</i>
-              </div>
+                <div class="row">
+                  <div class="input-field col s8 m4">
+                    <input id="search" type="search" required ng-model="buscar">
+                    <label class="label-icon" for="search"><i class="material-icons">search</i></label>
+                    <i class="material-icons">close</i>
+                  </div>
+                </div>
             </form>
           </div>
     
           <table>
             <thead>
               <tr>
-                  <th>Año</th>
-                  <th>Cuatrimestre</th>
-                  <th>Materia</th>
-                  <th>Estado</th>
+                  <th>
+                    <a ng-click="revertirOrden(); sortType = 'anio'">
+                      Año
+                      <span ng-show="sortType == 'anio' && sortReverse == true" class="fa fa-caret-down"><i class="tiny material-icons">arrow_drop_up</i></span>
+                      <span ng-show="sortType == 'anio' && sortReverse == false" class="fa fa-caret-down"><i class="tiny material-icons">arrow_drop_down</i></span>
+                    </a>
+                  </th>
+                  <th>
+                    <a ng-click="revertirOrden(); sortType = 'cuatrimestre'">
+                      Cuatrimestre
+                      <span ng-show="sortType == 'cuatrimestre' && sortReverse == true" class="fa fa-caret-down"><i class="tiny material-icons">arrow_drop_up</i></span>
+                      <span ng-show="sortType == 'cuatrimestre' && sortReverse == false" class="fa fa-caret-down"><i class="tiny material-icons">arrow_drop_down</i></span>
+                    </a>
+                  </th>
+                  <th>
+                    <a ng-click="revertirOrden(); sortType = 'nombreMateria'">
+                      Materia
+                      <span ng-show="sortType == 'nombreMateria' && sortReverse == true" class="fa fa-caret-down"><i class="tiny material-icons">arrow_drop_up</i></span>
+                      <span ng-show="sortType == 'nombreMateria' && sortReverse == false" class="fa fa-caret-down"><i class="tiny material-icons">arrow_drop_down</i></span>
+                    </a>  
+                  </th>
+                  <th>
+                    <a ng-click="revertirOrden(); sortType = 'estado'">
+                      Estado
+                      <span ng-show="sortType == 'estado' && sortReverse == true" class="fa fa-caret-down"><i class="tiny material-icons">arrow_drop_up</i></span>
+                      <span ng-show="sortType == 'estado' && sortReverse == false" class="fa fa-caret-down"><i class="tiny material-icons">arrow_drop_down</i></span>
+                    </a>  
+                  </th>
                   <th>Opciones</th>
               </tr>
             </thead>
     
             <tbody>
-              <tr ng-repeat="cursada in cursadas ">
+              <tr ng-repeat="cursada in cursadas | orderBy:sortType:sortReverse | filter: buscar">
                 <td>{{cursada.comision.anio}}</td>
                 <td>{{cursada.comision.cuatrimestre}}</td>
                 <td>{{cursada.comision.nombreMateria}}</td>
