--- a/app/views/escuela_listar.html
+++ b/app/views/escuela_listar.html
@@ -3,10 +3,12 @@
     <a href="#/escuelas-agregar" class="btn btn-agregar">Agregar escuela</a>
     <div class="nav-wrapper">
         <form>
-          <div class="input-field">
-            <input id="search" type="search" required ng-model="buscar">
-            <label class="label-icon" for="search"><i class="material-icons">search</i></label>
-            <i class="material-icons">close</i>
+          <div class="row">
+            <div class="input-field">
+              <input id="search" type="search" required ng-model="buscar">
+              <label class="label-icon" for="search"><i class="material-icons">search</i></label>
+              <i class="material-icons">close</i>
+            </div>
           </div>
         </form>
       </div>
@@ -14,14 +16,26 @@
       <table>
         <thead>
           <tr>
-              <th>Nombre</th>
-              <th>Orientación</th>
+              <th>
+                <a ng-click="revertirOrden(); sortType = 'nombre'">
+                  Nombre
+                  <span ng-show="sortType == 'nombre' && sortReverse == true" class="fa fa-caret-down"><i class="tiny material-icons">arrow_drop_up</i></span>
+                  <span ng-show="sortType == 'nombre' && sortReverse == false" class="fa fa-caret-down"><i class="tiny material-icons">arrow_drop_down</i></span>
+                </a>
+              </th>
+              <th>
+                <a ng-click="revertirOrden(); sortType = 'orientacion'">
+                  Orientación
+                  <span ng-show="sortType == 'orientacion' && sortReverse == true" class="fa fa-caret-down"><i class="tiny material-icons">arrow_drop_up</i></span>
+                  <span ng-show="sortType == 'orientacion' && sortReverse == false" class="fa fa-caret-down"><i class="tiny material-icons">arrow_drop_down</i></span>
+                </a>
+              </th>
               <th>Opciones</th>
           </tr>
         </thead>
 
         <tbody>
-          <tr ng-repeat="escuela in escuelas">
+          <tr ng-repeat="escuela in escuelas | orderBy:sortType:sortReverse | filter: buscar">
             <td>{{escuela.nombre}}</td>
             <td>{{escuela.orientacion}}</td>
             <td><a title="Editar" href="#/escuelas-agregar/{{escuela.id}}"><i class="listar-iconos material-icons">edit</i></a></td>
