--- a/app/views/tutor/tutor_alumnos_listar.html
+++ b/app/views/tutor/tutor_alumnos_listar.html
@@ -14,15 +14,33 @@
         <table>
           <thead>
             <tr>
-                <th>DNI</th>
-                <th>Nombre</th>
-                <th>Apellido</th>
+                <th>
+                    <a ng-click="revertirOrden(); sortType = 'dni'">
+                      DNI
+                      <span ng-show="sortType == 'dni' && sortReverse == true" class="fa fa-caret-down"><i class="tiny material-icons">arrow_drop_up</i></span>
+                      <span ng-show="sortType == 'dni' && sortReverse == false" class="fa fa-caret-down"><i class="tiny material-icons">arrow_drop_down</i></span>
+                    </a>
+                  </th>
+                  <th>
+                    <a ng-click="revertirOrden(); sortType = 'nombre'">
+                      Nombre
+                      <span ng-show="sortType == 'nombre' && sortReverse == true" class="fa fa-caret-down"><i class="tiny material-icons">arrow_drop_up</i></span>
+                      <span ng-show="sortType == 'nombre' && sortReverse == false" class="fa fa-caret-down"><i class="tiny material-icons">arrow_drop_down</i></span>
+                    </a>
+                  </th>
+                  <th>
+                    <a ng-click="revertirOrden(); sortType = 'apellido'">
+                      Apellido
+                      <span ng-show="sortType == 'apellido' && sortReverse == true" class="fa fa-caret-down"><i class="tiny material-icons">arrow_drop_up</i></span>
+                      <span ng-show="sortType == 'apellido' && sortReverse == false" class="fa fa-caret-down"><i class="tiny material-icons">arrow_drop_down</i></span>
+                    </a>
+                  </th>
                 <th>Opciones</th>
             </tr>
           </thead>
       
           <tbody>
-            <tr ng-repeat="alumno in alumnos">
+            <tr ng-repeat="alumno in alumnos | orderBy:sortType:sortReverse | filter: buscar">
               <td>{{alumno.username}}</td>
               <td>{{alumno.first_name}}</td>
               <td>{{alumno.last_name}}</td>
