--- a/app/views/tutores_listar_informes.html
+++ b/app/views/tutores_listar_informes.html
@@ -3,18 +3,26 @@
       <h3> <strong>Informes</strong> realizados por <strong> {{tutor.nombre}} {{tutor.apellido}}</strong> </h3>
     <div class="nav-wrapper">
         <form>
-          <div class="input-field">
-            <input id="search" type="search" required ng-model="buscar">
-            <label class="label-icon" for="search"><i class="material-icons">search</i></label>
-            <i class="material-icons">close</i>
-          </div>
+          <div class="row">
+            <div class="input-field">
+              <input id="search" type="search" required ng-model="buscar">
+              <label class="label-icon" for="search"><i class="material-icons">search</i></label>
+              <i class="material-icons">close</i>
+            </div>
+          </div> 
         </form>
       </div>
 
       <table>
         <thead>
           <tr>
-              <th>Fecha</th>
+              <th>
+                <a ng-click="revertirOrden(); sortType = 'fecha'">
+                  Fecha
+                  <span ng-show="sortType == 'fecha' && sortReverse == true" class="fa fa-caret-down"><i class="tiny material-icons">arrow_drop_up</i></span>
+                  <span ng-show="sortType == 'fecha' && sortReverse == false" class="fa fa-caret-down"><i class="tiny material-icons">arrow_drop_down</i></span>
+                </a>
+              </th>
               <th>Alumno</th>
               <th>Título</th>
               <th>Descripción</th>
@@ -23,7 +31,7 @@
         </thead>
 
         <tbody>
-          <tr ng-repeat="informe in informes"> <!--  | filter: buscar -->
+          <tr ng-repeat="informe in informes | orderBy:sortType:sortReverse | filter: buscar">
             <td>{{informe.fecha}}</td>
             <td>{{informe.usuario.first_name}} {{informe.usuario.last_name}}</td>
             <td>{{informe.titulo}}</td>
