--- a/app/views/actividad_ver.html
+++ b/app/views/actividad_ver.html
@@ -1,4 +1,4 @@
-<main class="container" ng-init="obtenerActividad(idActividad)">
+<main class="container" ng-init="obtenerActividad()">
     
         <a href="#/actividades-listar/{{idAlumno}}" class="btn btn-volver">Volver</a>
         <h2>Ver <strong>actividad</strong></h2>
