--- a/app/views/tutor_ver.html
+++ b/app/views/tutor_ver.html
@@ -1,4 +1,4 @@
-<main class="container" ng-init="obtenerAdministrador(idAdmin)">
+<main class="container" ng-init="obtenerTutor()">
     
     <a href="#/tutores-listar" class="btn btn-volver">Volver</a>
     <h2>Ver <strong>tutor</strong></h2>
@@ -6,15 +6,15 @@
     <div class="row">
             <div class="row">
                 <div class="input-field col s6">
-                    <h5>DNI: <strong>{{administrador.username}}</strong></h5>
+                    <h5>DNI: <strong>{{tutor.username}}</strong></h5>
                     <br>
-                    <h5>Nombre: <strong>{{administrador.first_name}}</strong></h5>
+                    <h5>Nombre: <strong>{{tutor.first_name}}</strong></h5>
                     <br>
-                    <h5>Apellido: <strong>{{administrador.last_name}}</strong></h5>
+                    <h5>Apellido: <strong>{{tutor.last_name}}</strong></h5>
                     <br>
-                    <h5>Email: <strong>{{administrador.email}}</strong></h5>
+                    <h5>Email: <strong>{{tutor.email}}</strong></h5>
                     <br>
-                    <h5>Teléfono: <strong>{{administrador.phone}}</strong></h5>
+                    <h5>Teléfono: <strong>{{tutor.phone}}</strong></h5>
                   
                 </div>
             </div>
