--- a/app/views/actividad_listar.html
+++ b/app/views/actividad_listar.html
@@ -30,7 +30,7 @@
             <td>{{actividad.descripcion}}</td>
             <td>
               <a title="Ver actividad" href="#/actividades-ver/{{actividad.id}}"><i class="listar-iconos material-icons">find_in_page</i></a>
-               <a title="Eliminar"  ng-click="eliminarActividad(actividad.id)"  ><i class="listar-iconos material-icons">delete</i></a>
+               <a title="Eliminar"  style="cursor: pointer;" ng-click="eliminarActividad(actividad.id)"  ><i class="listar-iconos material-icons">delete</i></a>
             </td>
           </tr>
         </tbody>
