--- a/app/views/admin_foro_agregarTema.html
+++ b/app/views/admin_foro_agregarTema.html
@@ -1,5 +1,5 @@
 <main class="container">
-    <a href="#/foro-admin" class="btn btn-agregar">Volver</a>
+    <a href="#/foro-temas/{{idCategoria}}" class="btn btn-agregar">Volver</a>
 
     <h2 ng-show="!isAdding">Agregar <strong>tema</strong></h2>
     <h2 ng-show="isAdding">Modificar <strong>tema</strong></h2>
