--- a/app/views/cursada_listar.html
+++ b/app/views/cursada_listar.html
@@ -1,6 +1,7 @@
 <main class="listar-container" ng-init="getCursadas(idAlumno)">
         <a href="#/alumnos-listar" class="btn btn-volver">Volver</a>
         <a href="#/cursadas-agregar/{{idAlumno}}" class="btn btn-agregar">Agregar cursada</a>
+        <h3> <strong>Cursadas</strong> de <strong> {{alumno.first_name}} {{alumno.last_name}}</strong> </h3>
         <div class="nav-wrapper">
             <form>
                 <div class="row">
