--- a/app/views/actividad_listar.html
+++ b/app/views/actividad_listar.html
@@ -1,6 +1,7 @@
 <main class="listar-container" ng-init="obtenerActividades()">
     <a href="#/alumnos-listar" class="btn btn-volver">Volver</a>
     <a href="#/actividad-agregar/{{idAlumno}}" class="btn btn-agregar">Agregar actividad</a>
+         <h3> <strong>Actividades</strong> de <strong> {{alumno.first_name}} {{alumno.last_name}}</strong> </h3>
     <div class="nav-wrapper">
         <form>
           <div class="input-field">
