--- a/app/views/admin_foro_temas.html
+++ b/app/views/admin_foro_temas.html
@@ -4,7 +4,7 @@
     <a href="#/foro-agregarTema/{{idCategoria}}" class="btn btn-agregar">Agregar tema</a>
 
     <ul class="collection with-header">
-        <li class="collection-header"><h4>Temas</h4></li>
+        <li class="collection-header"><h4>Temas de categoria <strong> {{categoria.nombre}}</strong> </h4></li>
         <li class="collection-item" ng-repeat="tema in temas"><a href="#/foro-mensajes/{{tema.id}}">{{tema.titulo}}</a> Estado: {{tema.estado}} | Visitas: {{tema.visitas}} <a title="Editar" href="#/foro-modificarTema/{{tema.id}}">
             <i class="material-icons btn-opciones">edit</i></a><button title="Eliminar" class="btn-remove" ng-click="eliminarTema(tema.id)"><i class="material-icons btn-opciones" style="color: red;">close</i></button>
                   </li>
