--- a/app/views/alumno_informe_listar.html
+++ b/app/views/alumno_informe_listar.html
@@ -1,6 +1,7 @@
 <main class="listar-container" ng-init="obtenerInformes()">
     <a href="#/alumnos-listar" class="btn btn-volver">Volver</a>
     <a href="#/informes-agregar/{{idAlumno}}" class="btn btn-agregar">Agregar informe</a>
+     <h3> <strong>Informes</strong> de <strong> {{alumno.first_name}} {{alumno.last_name}}</strong> </h3>
     <div class="nav-wrapper">
         <form>
           <div class="row">
