--- a/app/views/tutor/tutor_alumnos_listar.html
+++ b/app/views/tutor/tutor_alumnos_listar.html
@@ -1,4 +1,5 @@
 <main class="listar-container" ng-init="obtenerAlumnos()"> 
+   <h3> Listado de <strong>Alumnos</strong> </h3>
         <div class="nav-wrapper">
           <form>
               <div class="row">
