--- a/app/views/tutor/tutor_cursadas_listar.html
+++ b/app/views/tutor/tutor_cursadas_listar.html
@@ -1,5 +1,6 @@
 <main class="listar-container" ng-init="obtenerCursadas(idAlumno)">
         <a href="#/tutor-alumnos" class="btn btn-volver">Volver</a>
+        <h3> <strong>Cursadas</strong> de <strong> {{alumno.first_name}} {{alumno.last_name}}</strong> </h3>
         <div class="nav-wrapper">
             <form>
                 <div class="row">
