--- a/app/views/tutores_listar_informes.html
+++ b/app/views/tutores_listar_informes.html
@@ -37,6 +37,7 @@
             <td>{{informe.titulo}}</td>
             <td>{{informe.descripcion}}</td>
             <td>
+              <a title="Eliminar"  style="cursor: pointer;" ng-click="eliminarInforme(informe.id)"  ><i class="listar-iconos material-icons">delete</i></a>
                 <!-- <a href="#/informes-modificar/{{informe.id}}"><i title="Editar" class="listar-iconos material-icons">edit</i></a> -->
             </td> 
           </tr>
