--- a/app/views/tutor/tutor_examenes_listar.html
+++ b/app/views/tutor/tutor_examenes_listar.html
@@ -1,7 +1,7 @@
-<main class="listar-container">
+<main class="listar-container" ng-init="obtenerExamenes(idCursada)">
         
         <a href="#/tutor-cursadas/{{idAlumno}}" class="btn btn-volver">Volver</a>
-
+        <h3> <strong>Examenes</strong> de <strong> {{alumno.first_name}} {{alumno.last_name}}</strong> en <strong> {{nombreMateria}}</strong> </h3>
         <div class="nav-wrapper">
             <form>
                 <div class="row">
