--- a/app/views/alumno/alumno_perfil.html
+++ b/app/views/alumno/alumno_perfil.html
@@ -1,6 +1,6 @@
 <main class="container" ng-init="obtenerAlumno(alumnoLog)">
 
-        <h2>Perfil del <strong>alumno</strong> <a href="#/alumnos-perfil-editar"><i title="Editar" class="listar-iconos material-icons">edit</i></a></h2>
+        <h2><strong>Alumno</strong> <a href="#/alumnos-perfil-editar"><i title="Editar" class="listar-iconos material-icons">edit</i></a></h2>
     
         <div class="row">
                 <div class="row">
