--- a/app/views/tutor_ver.html
+++ b/app/views/tutor_ver.html
@@ -1,7 +1,7 @@
 <main class="container" ng-init="obtenerTutor()">
     
-    <a href="#/tutores-listar" class="btn btn-volver">Volver</a>
-    <h2>Ver <strong>tutor</strong></h2>
+    <a href="#/tutor-alumnos" class="btn btn-volver">Volver</a>
+    <h2> <strong>Perfil</strong></h2>
 
     <div class="row">
             <div class="row">
