--- a/app/views/alumno/alumno_perfil.html
+++ b/app/views/alumno/alumno_perfil.html
@@ -18,6 +18,8 @@
                         <h5>Año de ingreso: <strong>{{alumno.anioIngreso}}</strong></h5>
                         <br>
                         <h5>Escuela: <strong>{{alumno.escuela.nombre}}</strong> - Orientación: <strong>{{alumno.escuela.orientacion}}</strong></h5>
+                        <br>
+                        <a title="Cambiar contraseña" href="javascript:void(0)" onclick="location.href=(BASE_URL+'auth/change_password');" class="btn btn-agregar">Cambiar contraseña</a>
                     </div>
                     <div class="input-field col s6">
                         
