--- a/app/views/admin_ver.html
+++ b/app/views/admin_ver.html
@@ -1,7 +1,7 @@
 <main class="container" ng-init="obtenerAdministrador(idAdmin)">
     
-    <h2>Perfil <!-- <a href="#/admin-editar/{{administrador.id}}"><i title="Editar" class="listar-iconos material-icons">edit</i></a> --></h2>
-
+    <h2>Perfil</h2>
+    
     <div class="row">
             <div class="row">
                 <div class="input-field col s6">
@@ -15,6 +15,8 @@
                     <br>
                     <h5>Teléfono: <strong>{{administrador.phone}}</strong></h5>
                     <br>
+
+                    <a title="Cambiar contraseña" href="javascript:void(0)" onclick="location.href=(BASE_URL+'auth/change_password');" class="btn btn-agregar">Cambiar contraseña</a>
                 </div>
                 <div class="input-field col s6">
                     
