--- a/app/views/inicio.html
+++ b/app/views/inicio.html
@@ -1,8 +1,19 @@
 <main class="container">
   <div class="row">
     <div class="col s12">
-      <pre>app/views/inicio.html</pre>
-      <h3>¡Hola! :)</h3>
+      <!-- <pre>app/views/inicio.html</pre>
+      <h3>¡Hola! :)</h3> -->
+      <h4>¡ Bienvenido !</h4>
+      <img src="assets/img/logoBienvenida.png" alt="">
+      
     </div>
   </div>
 </main>
+
+<style>
+  main{
+    text-align:center;
+    display: flex;
+    justify-content: space-around;
+  }
+</style>
