--- a/app/views/tutor_ver.html
+++ b/app/views/tutor_ver.html
@@ -15,7 +15,8 @@
                     <h5>Email: <strong>{{tutor.email}}</strong></h5>
                     <br>
                     <h5>Teléfono: <strong>{{tutor.phone}}</strong></h5>
-                  
+                    <br>
+                    <a title="Cambiar contraseña" href="javascript:void(0)" onclick="location.href=(BASE_URL+'auth/change_password');" class="btn btn-agregar">Cambiar contraseña</a>
                 </div>
             </div>
     </div>
