correciones de consola y vistas

--- a/app/views/alumno_ver.html
+++ b/app/views/alumno_ver.html
@@ -1,7 +1,7 @@
 <main class="container" ng-init="obtenerAlumnos(idAlumno)">
     
-    <a href="#/alumnos-listar" class="btn btn-volver">Volver</a>
-    <h2>Ver <strong>alumno</strong></h2>
+
+    <h2> <strong>Alumno</strong></h2>
 
     <div class="row">
             <div class="row">
