--- a/app/views/tutor/tutor_alumnos_listar.html
+++ b/app/views/tutor/tutor_alumnos_listar.html
@@ -49,7 +49,7 @@
                 <a title="Cursadas" href="#/tutor-cursadas/{{alumno.id}}"><i class="listar-iconos material-icons">class</i></a>
                 <a title="Ver informes" href="#/tutor-informes/{{alumno.id}}"><i class="listar-iconos material-icons">library_books</i></a>
                 <a title="Ver actividades" href="#/tutor-actividades/{{alumno.id}}"><i class="listar-iconos material-icons">watch_later</i></a>
-                <a title="Ver alumno" href="#/tutor-alumno-ver/{{alumno.id}}"><i title="Ver" class="listar-iconos material-icons">search</i></a></td>
+                <a title="Ver alumno" href="#/alumnos-ver/{{alumno.id}}"><i title="Ver" class="listar-iconos material-icons">search</i></a></td>
               </tr>
           </tbody>
         </table>
