--- a/app/views/alumno_ver.html
+++ b/app/views/alumno_ver.html
@@ -1,7 +1,7 @@
 <main class="container" ng-init="obtenerAlumnos(idAlumno)">
-    
+    <a href="#/alumnos-listar" class="btn btn-volver">Volver</a>
 
-    <h2> <strong>Alumno</strong></h2>
+    <h2>Ver <strong>Alumno</strong></h2>
 
     <div class="row">
             <div class="row">
@@ -21,6 +21,7 @@
                     <h5>Año de ingreso: <strong>{{alumno.anioIngreso}}</strong></h5>
                     <br>
                     <h5>Escuela: <strong>{{alumno.escuela.nombre}}</strong> - Orientación: <strong>{{alumno.escuela.orientacion}}</strong></h5>
+                    <br>
                 </div>
                 <div class="input-field col s6">
                     
