--- a/app/views/alumno_informe_listar.html
+++ b/app/views/alumno_informe_listar.html
@@ -56,6 +56,7 @@
             <td>{{informe.descripcion}}</td>
             <td>{{informe.autor.first_name}} {{informe.autor.last_name}}</td>
             <td>
+                <a href="#/informes-ver/{{informe.id}}"><i title="Ver informe" class="listar-iconos material-icons">find_in_page</i></a>
                 <a href="#/informes-modificar/{{informe.id}}"><i title="Editar" class="listar-iconos material-icons">edit</i></a>
                 <a title="Eliminar"  style="cursor: pointer;" ng-click="eliminarInforme(informe.id)"  ><i class="listar-iconos material-icons">delete</i></a>
 
