agregar tema para alumnos y tutores y cambios de estado en foro

--- a/app/views/admin_foro_temas.html
+++ b/app/views/admin_foro_temas.html
@@ -5,9 +5,14 @@
 
     <ul class="collection with-header">
         <li class="collection-header"><h4>Temas de categoria <strong> {{categoria.nombre}}</strong> </h4></li>
-        <li class="collection-item" ng-repeat="tema in temas"><a href="#/foro-mensajes/{{tema.id}}">{{tema.titulo}}</a> Estado: {{tema.estado}} | Visitas: {{tema.visitas}} <a title="Editar" href="#/foro-modificarTema/{{tema.id}}">
-            <i class="material-icons btn-opciones">edit</i></a><button title="Eliminar" class="btn-remove" ng-click="eliminarTema(tema.id)"><i class="material-icons btn-opciones" style="color: red;">close</i></button>
-                  </li>
+        <li class="collection-item" ng-repeat="tema in temas">
+            <a href="#/foro-mensajes/{{tema.id}}">{{tema.titulo}}</a> Estado: {{tema.estado}} | Visitas: {{tema.visitas}} 
+            <a title="Editar" href="#/foro-modificarTema/{{tema.id}}"> <i class="material-icons btn-opciones">edit</i></a>
+            <button title="Eliminar" class="btn-remove" ng-click="eliminarTema(tema.id)"><i class="material-icons btn-opciones" style="color: red;">close</i></button>
+            <button title="Cerrar" class="btn-remove" ng-show="tema.estado =='abierto'" ng-click="cerrarTema(tema.id)"><i class="material-icons btn-opciones" style="color: gray;">speaker_notes_off</i></button>
+            <button title="Abrir" class="btn-remove" ng-show="tema.estado =='cerrado'" ng-click="abrirTema(tema.id)"><i class="material-icons btn-opciones" style="color: green;">loop</i></button>
+
+        </li>
     </ul>
 </main>
 
