--- a/app/views/tutor/tutor_foro_agregarMensaje.html
+++ b/app/views/tutor/tutor_foro_agregarMensaje.html
@@ -1,6 +1,6 @@
 <main class="container">
 
-    <a href="#/foro-tutor-temas/{{idTema}}" class="btn btn-agregar">Volver</a>
+    <a href="#/foro-tutor-mensajes/{{idTema}}" class="btn btn-agregar">Volver</a>
 
     <h2 ng-show="!isAdding">Agregar <strong>mensaje</strong></h2>
     <h2 ng-show="isAdding">Modificar <strong>mensaje</strong></h2>
