--- a/app/views/admin_foro_mensajes.html
+++ b/app/views/admin_foro_mensajes.html
@@ -1,7 +1,9 @@
 <main class="container" ng-init="obtenerMensajes(idTema)">
 
     <a href="#/foro-temas/{{idCategoria}}" class="btn btn-volver">Volver</a>
-    <a href="#/foro-agregarMensaje/{{idTema}}" class="btn btn-agregar">Agregar mensaje</a>
+    <!-- <a href="#/foro-agregarMensaje/{{idTema}}" ng-show="false" class="btn btn-agregar">Agregar mensaje</a> -->
+    <button title="Agregar mensaje" class="waves-effect waves-light btn" ng-show="!cerrado" ng-click="agregarMensajeNuevo(idTema)">Agregar mensaje</button>
+
 
     <ul class="collection with-header">
         <li class="collection-header"><h4><strong> {{tema.titulo}}</strong> </h4></li>
