--- a/app/views/alumno/alumno_foro_agregarMensaje.html
+++ b/app/views/alumno/alumno_foro_agregarMensaje.html
@@ -1,5 +1,5 @@
 <main class="container">
-        <a href="#/foro-alumno-temas/{{idTema}}" class="btn btn-agregar">Volver</a>
+        <a href="#/foro-alumno-mensajes/{{idTema}}" class="btn btn-agregar">Volver</a>
     
         <h2 ng-show="!isAdding">Agregar <strong>mensaje</strong></h2>
         <h2 ng-show="isAdding">Modificar <strong>mensaje</strong></h2>
