--- a/app/views/alumno/alumno_foro_temas.html
+++ b/app/views/alumno/alumno_foro_temas.html
@@ -1,6 +1,7 @@
 <main class="container" ng-init="obtenerTemas(idCategoria)">
 
     <a href="#/foro-alumno" class="btn btn-volver">Volver</a>
+    <a href="#/foro-alumno-agregarTema/{{idCategoria}}" class="btn btn-agregar">Agregar tema</a>
 
     <ul class="collection with-header">
         <li class="collection-header"><h4>Temas</h4></li>
