--- a/app/views/alumno_ver.html
+++ b/app/views/alumno_ver.html
@@ -22,6 +22,7 @@
                     <br>
                     <h5>Escuela: <strong>{{alumno.escuela.nombre}}</strong> - Orientación: <strong>{{alumno.escuela.orientacion}}</strong></h5>
                     <br>
+                    <a title="Resetear contraseña" href="javascript:void(0)" ng-click="resetearContrasenia(alumno.id)" class="btn btn-agregar">Resetear contraseña</a>
                 </div>
                 <div class="input-field col s6">
                     
