--- a/app/views/comision_agregar.html
+++ b/app/views/comision_agregar.html
@@ -43,6 +43,7 @@
                 <div class="row">
                     <div class="input-field col s4 m4">
                             <select name="dias" id="dias" ng-model="dias" ng-required="true">
+                                <option value="" disabled selected>Elige un día</option>
                                 <option value="1">Lunes</option>
                                 <option value="2">Martes</option>
                                 <option value="3">Miércoles</option>
