--- a/app/views/headerTutor.html
+++ b/app/views/headerTutor.html
@@ -22,7 +22,7 @@
          <li><a href="#/tutor-alumnos">Administrar</a></li>
       </ul>
       <ul id="dropdownUsuario" class="dropdown-content">
-        <li><a href="#/tutor-ver">Perfil</a></li>
+        <li><a href="#/tutor-perfil">Perfil</a></li>
         <li class="divider"></li>
         <li><a href="javascript:void(0)" onclick="location.href=(BASE_URL+'auth/logout');">Salir</a></li>
       </ul>
