--- a/app/views/tutor_ver.html
+++ b/app/views/tutor_ver.html
@@ -16,7 +16,7 @@
                     <br>
                     <h5>Teléfono: <strong>{{tutor.phone}}</strong></h5>
                     <br>
-                    <a title="Cambiar contraseña" href="javascript:void(0)" onclick="location.href=(BASE_URL+'auth/change_password');" class="btn btn-agregar">Cambiar contraseña</a>
+                    <a title="Resetear contraseña" href="javascript:void(0)" ng-click="resetearContrasenia(tutor.id)" class="btn btn-agregar">Resetear contraseña</a>
                 </div>
             </div>
     </div>
