--- a/app/views/actividad_agregar.html
+++ b/app/views/actividad_agregar.html
@@ -16,7 +16,8 @@
                 <div class="row">
                     <div class="input-field col s4 m4">
                             <select name="dias" id="dias" ng-model="dias" ng-required="true">
-                                <option selected="selected" value="1">Lunes</option>
+                                <option value="" disabled selected>Elige un día</option>
+                                <option value="1">Lunes</option>
                                 <option value="2">Martes</option>
                                 <option value="3">Miércoles</option>
                                 <option value="4">Jueves</option>
