--- a/app/views/alumno_listar.html
+++ b/app/views/alumno_listar.html
@@ -65,6 +65,17 @@
         </tr>
     </tbody>
   </table>
+  
+<!--   <ul class="pagination">
+    <li class="disabled"><a href=""><i class="material-icons">chevron_left</i></a></li>
+    <li class="active"><a href="" ng-click="paginar(1);">1</a></li>
+    <li class="waves-effect"><a href="" ng-click="paginar(2);">2</a></li>
+    <li class="waves-effect"><a ng-click="paginar(3);">3</a></li>
+    <li class="waves-effect"><a ng-click="paginar(4);">4</a></li>
+    <li class="waves-effect"><a ng-click="paginar(5);">5</a></li>
+    <li class="waves-effect"><a href=""><i class="material-icons">chevron_right</i></a></li>
+  </ul> -->
+              
 </main>
 
 <style>
