--- a/app/views/404.html
+++ b/app/views/404.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col s12">
       <pre ng-bind="currentLocation"></pre>
-      <h3>¡Epa, esta página no existe! :(</h3>
+      <h3>¡No tiene acceso a esta página!</h3>
     </div>
   </div>
 </main>
